pkg/clusteragent/appsec/istio/testdata/istio-gateway/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: appsec-gw-test
  labels:
    istio-injection: enabled
