pkg/clusteragent/appsec/istio/testdata/istio-gateway/02-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: appsec-gw-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: appsec-gw-test
spec:
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
