pkg/clusteragent/appsec/istio/testdata/istio-gateway/02-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-istio-gateway
  namespace: appsec-gw-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-istio
  template:
    metadata:
      labels:
        app: test-istio
    spec:
      containers:
      - name: istio-proxy
        image: nginx:alpine
        ports:
        - containerPort: 80
