pkg/clusteragent/appsec/istio/testdata/istio-gateway/03-istio-gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: appsec-gw-test
spec:
  selector:
    app: test-istio-gateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.example.com"
