pkg/clusteragent/appsec/istio/testdata/istio-gateway/05-envoyfilter.yml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: datadog-appsec-envoyfilter
  namespace: istio-system
  labels:
    app.kubernetes.io/component: datadog-appsec-injector
    app.kubernetes.io/part-of: datadog
    app.kubernetes.io/managed-by: datadog-cluster-agent
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          grpc_service:
            envoy_grpc:
              cluster_name: datadog_appsec_ext_proc_cluster
            initial_metadata:
            - key: x-datadog-envoy-integration
              value: "1"
            - key: x-datadog-appsec-injector
              value: "1"
          failure_mode_allow: true
          processing_mode:
            request_header_mode: SEND
            response_header_mode: SEND
          allow_mode_override: true
  - applyTo: CLUSTER
    match:
      context: GATEWAY
      cluster:
        service: "*"
    patch:
      operation: ADD
      value:
        name: datadog_appsec_ext_proc_cluster
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: datadog_appsec_ext_proc_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: appsec-processor.appsec-gw-test.svc.cluster.local
                    port_value: 443
