pkg/clusteragent/appsec/istio/testdata/istio-gateway/05-sidecar-pod-simulation.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-simulation
  namespace: appsec-gw-test
  labels:
    app: test-istio-gateway
    istio: ingressgateway
spec:
  containers:
  - name: istio-proxy
    image: nginx:alpine
    ports:
    - containerPort: 80
  - name: datadog-appsec-processor
    image: nginx:alpine
    ports:
    - containerPort: 8080
      name: grpc
      protocol: TCP
    - containerPort: 8081
      name: health
      protocol: TCP
    env:
    - name: DD_SERVICE_EXTENSION_TLS
      value: "false"
    - name: DD_SERVICE_EXTENSION_PORT
      value: "8080"
    - name: DD_SERVICE_EXTENSION_HEALTHCHECK_PORT
      value: "8081"
