pkg/clusteragent/appsec/istio/testdata/istio-gateway/06-second-gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: test-gateway-2
  namespace: appsec-gw-test
spec:
  selector:
    app: test-istio-gateway
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "secure.example.com"
    tls:
      mode: PASSTHROUGH
